--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -168,17 +168,17 @@ div.container-wrapper {
 div.container-left {
   width: 100%;
   max-height: 100%;
-  overflow-y: auto;
   overflow-x: hidden;
+  overflow-y: auto;
   padding: 15px 15px 15px 15px;
   border: 3px double #EEEEEE;
   border-radius: 8px;
-  float:left;
   display:block;
   background: radial-gradient(circle at top left, #353535, #555555);
   box-shadow: 0px 0px 4px 3px #333333;
   box-sizing: border-box;
   position: relative;
+
 }
 
 div.container-right {
@@ -187,7 +187,6 @@ div.container-right {
   padding: 12px 12px 12px 12px;
   border: 3px double #EEEEEE;
   border-radius: 8px;
-  float:left;
   display:block;
   max-width: 350px;
   background: radial-gradient(circle at top left, #333333, #555555);
